# SeRF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark_deep_arbitrary.cc  benchmark_deep_halfbounded.cc  generate_groundtruth.cc  serf_arbitrary.cc  serf_halfbound.cc
include/: base_index.h
include/common/: data_processing.h  data_wrapper.h  logger.h  reader.h  utils.h
include/incremental_hnsw/: bruteforce.h  hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  visited_list_pool.h
sample_data/: deep_10k.fvecs  deep_query.fvecs
src/: base_struct.h  index_base.h  index_recursion_batch.h  index_recursion_batch_reverse_prune.h  range_index_base.h  segment_graph_1d.h  segment_graph_2d.h
src/base_hnsw/: bruteforce.h  hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  visited_list_pool.h
src/baselines/: knn_first_hnsw.h
src/common/: CMakeLists.txt  data_processing.cc  data_wrapper.cc  logger.cc  reader.cc  utils.cc
src/delta_base_hnsw/: bruteforce.h  hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  visited_list_pool.h
src/half_bounded/: index_half_bounded.h  index_half_bounded_update.h  range_index_delta_hnsw_one_way.h
tests/: CMakeLists.txt  exp_duplicate_pos.cc  exp_halfbound.cc  exp_halfbound_params.cc  exp_halfbound_scalability.cc  exp_search_outbound.cc  exp_search_prune_reverse.cc  exp_test.cc  exp_twoside_scalability.cc  exp_twoside_search.cc  exp_twoside_sensitivity.cc  exp_twoside_sensitivity_params.cc  faiss_ivfpq_halfbound.cc  run_baselines.cc
